fix stretching of camp background

--- a/src/components/templates/Camp/components/Map.scss
+++ b/src/components/templates/Camp/components/Map.scss
@@ -4,13 +4,9 @@ $white: #ffffff;
 $border-radius: 28px;
 
 .grid-container {
-  position: relative;
-  left: 0;
+  position: absolute;
   width: 100%;
-  max-width: 1080;
-  margin: 80px auto 0;
-  display: flex;
-  align-items: center;
+  display: grid;
 
   &:before {
     content: " ";
@@ -112,23 +108,22 @@ $border-radius: 28px;
   .near-adjacent {
     opacity: 0.2;
   }
+}
+.grid-room-btn {
+  z-index: 100;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  opacity: 0;
+  transform: translateY(-20px) scale(0.8);
+}
 
-  .grid-room-btn {
-    z-index: 100;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    transition: all 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    opacity: 0;
-    transform: translateY(-20px) scale(0.8);
-  }
-
-  .grid-room-btn.isUnderneath {
-    opacity: 1;
-    transform: translateY(2px) scale(1);
-  }
+.grid-room-btn.isUnderneath {
+  opacity: 1;
+  transform: translateY(2px) scale(1);
 }
 
 .me {
@@ -156,6 +151,7 @@ $border-radius: 28px;
   }
 }
 .room {
+  z-index: 1;
   &:hover {
     // Disable temporary the background for zillowville, maybe add this as an option from the admin panel
     // background-color: rgba($white, 0.8);
